Describe extra credit optio for assignments.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2020: MWF 2 - 2:50pm, LINC 228</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LINC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="unselected" href="../syllabus/">syllabus</a><a class="unselected" href="../calendar/">calendar</a><a class="selected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="unselected" href="../links/">useful links</a><a class="unselected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
@@ -26,7 +26,7 @@
     <div class="content">
         <div class="instructions">
 	  <p><u>Good programming style</u>: Please read and follow the
-	    <a style="color:#0000FF" href="../161_style_guideline.pdf">programming
+	    <a style="color:#0000FF" href="../assignments/161_style_guideline.pdf">programming
 	      style guidelines</a> for this class.</p>
 
 	  <p>Part of your grade for each assignment depends on 
@@ -34,7 +34,7 @@
 	    vertical whitespace between statements, good variable names, 
 	    etc., as explained in the guidelines.</p>
 	  
-          <p><u>Grading</u>: Assigments 1-4 will be <u>graded by
+          <p><u>Grading</u>: Assignments 1-4 will be <u>graded by
 	      demonstrating your work for 10 minutes with a
 	      TA</u>. You are required to
 	    <u>sign up and meet with a TA within two weeks of the due date</u> to demo.</p>
@@ -55,11 +55,22 @@
 	    <li><u>No demo:</u> If you do not demonstrate your
 	  assignment, you will receive a 0.</li>
 	  </ul>
+	  <p>One of your goals during your demo is to obtain specific
+	    feedback about your assignment in terms of its strengths
+	    and ways it can be improved.  You can gain up to 
+	    <u>5 points of extra credit</u> per assignment 
+	    by submitting a description of any weaknesses and how
+	    you would change your program to address them.  You
+	    may want to take notes about these ideas during your
+	    demo session.  Our aim is for you to get a real benefit 
+	    from demonstrating your work and thinking carefully about
+	    the feedback you receive.
+	  </p>
         </div>
         <table class="assignments">
             <tr>
                 <td>Assignment #1 - </td>
-                <!-- <td> <a href="assign1.pdf">The Size of Numbers in C++</a></td> -->
+                <td> <a href="">Fortune Teller</a></td> 
             </tr>
             <tr>
                 <td>Assignment #2 -</td>
