Change LIC to LINC.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -16,7 +16,7 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2020: MWF 2 - 2:50 p.m., LIC 228</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LINC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="unselected" href="../syllabus/">syllabus</a><a class="selected" href="../calendar/">calendar</a><a class="unselected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="unselected" href="../links/">useful links</a><a class="unselected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
@@ -325,7 +325,7 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
 -->
 	   <tr>
-             <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LIC 228</h2></td>
+             <td colspan=5 style="text-align: center;"><hr><h2>03/16 (Monday) Final Exam: 6:00 - 7:50 p.m. in LINC 228</h2></td>
       </tr>
 </table>
 </center>
