Adjust font imports to enable bold and change LAB to Lab.

--- a/labs/index.html
+++ b/labs/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="../resources/js/hamburgerSelector.js"></script>
     <title>CS 161 Labs</title>
@@ -32,34 +32,34 @@
         </div>
         <table class="assignments">
             <tr>
-                <td>LAB #1 - <!-- <a href="Lab1-Student-W19.pdf">Getting Set Up</a> --></td>
+                <td>Lab #1 - Off to a Good Start</td>
             </tr>
             <tr>
-                <td>LAB #2 - <!-- <a href="CS_161_W19_Lab_WS_2.pdf">Worksheet: Design</a> and <a href="Lab2-Student-W19.pdf">Hands-on: More Linux, Conditionals, and rand()</a> --></td>
+                <td>Lab #2 - <!-- <a href="CS_161_W19_Lab_WS_2.pdf">Worksheet: Design</a> and <a href="Lab2-Student-W19.pdf">Hands-on: More Linux, Conditionals, and rand()</a> --></td>
             </tr>
             <tr>
-                <td>LAB #3 - <!-- <a href="Lab3-Student-W19.pdf">Take Home Quiz, Worksheet, and Hands-on Design/Implementation Loops</a> --></td>
+                <td>Lab #3 - <!-- <a href="Lab3-Student-W19.pdf">Take Home Quiz, Worksheet, and Hands-on Design/Implementation Loops</a> --></td>
             </tr>
             <tr>
-                <td>LAB #4 - <!-- <a href="Lab4-Student-W19.pdf">Worksheet and Hands-on Design/Implementation Loops w/ Function</a> --></td>
+                <td>Lab #4 - <!-- <a href="Lab4-Student-W19.pdf">Worksheet and Hands-on Design/Implementation Loops w/ Function</a> --></td>
             </tr>
             <tr>
-                <td>LAB #5 - <!-- <a href="Lab5-Student-W19.pdf">Proficiency Demo Practice &amp Value-Returning and Passing Arguments to Functions </a> --></td>
+                <td>Lab #5 - <!-- <a href="Lab5-Student-W19.pdf">Proficiency Demo Practice &amp Value-Returning and Passing Arguments to Functions </a> --></td>
             </tr>
             <tr>
-                <td>LAB #6 - <!-- <a href="Lab6-Student-W19.pdf">Worksheet on Pass by Reference to Functions &amp; Recursion/Hands-on Work on Assignment 4</a> --></td>
+                <td>Lab #6 - <!-- <a href="Lab6-Student-W19.pdf">Worksheet on Pass by Reference to Functions &amp; Recursion/Hands-on Work on Assignment 4</a> --></td>
             </tr>
             <tr>
-                <td>LAB #7 - <!-- <a href="Lab7-Student-W19.pdf">Worksheet on Recursion and Reference/Pointers &amp; Hands-on Implement Recursion and References/Pointers</a> --></td>
+                <td>Lab #7 - <!-- <a href="Lab7-Student-W19.pdf">Worksheet on Recursion and Reference/Pointers &amp; Hands-on Implement Recursion and References/Pointers</a> --></td>
             </tr>
             <tr>
-                <td>LAB #8 - <!-- <a href="Lab8-Student-W19.pdf">Worksheet on Dynamic Memory and Strings &amp; Hands-on GDB and C-Style vs. C++ strings</a> --></td>
+                <td>Lab #8 - <!-- <a href="Lab8-Student-W19.pdf">Worksheet on Dynamic Memory and Strings &amp; Hands-on GDB and C-Style vs. C++ strings</a> --></td>
             </tr>
             <tr>
-                <td>LAB #9 - <!-- <a href="Lab9-Student-W19.pdf">Towers of Hanoi: Two Dimensional Arrays with Recursion</a> --></td>
+                <td>Lab #9 - <!-- <a href="Lab9-Student-W19.pdf">Towers of Hanoi: Two Dimensional Arrays with Recursion</a> --></td>
             </tr>
             <tr>
-                <td>LAB #10 - </td>
+                <td>Lab #10 - </td>
                 <!-- <td>WEEK 10 Proficiency Demos &amp; Work on Assignment #6 with remaining time.</td> -->
             </tr>
         </table>
