Employ bold text and include links to TEACH and Canvas.

--- a/assignments/index.html
+++ b/assignments/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700" rel="stylesheet" type="text/css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="../resources/js/hamburgerSelector.js"></script>
     <title>CS 161 Assignments</title>
@@ -25,7 +25,7 @@
     <h2>Assignments</h2>
     <div class="content">
         <div class="instructions">
-	  <p><u>Good programming style</u>: Please read and follow the
+	  <p><b>Good programming style</b>: Please read and follow the
 	    <a style="color:#0000FF" href="../assignments/161_style_guideline.pdf">programming
 	      style guidelines</a> for this class.</p>
 
@@ -34,31 +34,31 @@
 	    vertical whitespace between statements, good variable names, 
 	    etc., as explained in the guidelines.</p>
 	  
-          <p><u>Grading</u>: Assignments 1-4 will be <u>graded by
+          <p><b>Grading</b>: Assignments 1-4 will be <b>graded by
 	      demonstrating your work for 10 minutes with a
-	      TA</u>. You are required to
-	    <u>sign up and meet with a TA within two weeks of the due date</u> to demo.</p>
+	      TA</b>. You are required to
+	    <b>sign up and meet with a TA within two weeks of the due date</b> to demo.</p>
 	  <ul>
-	    <li><u>Tip:</u>  Pick an early slot before they are all taken!  
+	    <li><b>Tip:</b>  Pick an early slot before they are all taken!  
 	    The earlier your demo, the sooner you get feedback, 
 	    which will help you do even better on the next assignment.</li>
-	    <li><u>Demo Outside 2 Weeks:</u> Assignments that are
+	    <li><b>Demo Outside 2 Weeks:</b> Assignments that are
           demonstrated later than the acceptable time period will be
           receive a 50 point deduction.  (Also, we cannot guarantee a
           late grading slot.)</li>
-	    <li><u>Demo Late Assignments:</u> Late assignments must still
+	    <li><b>Demo Late Assignments:</b> Late assignments must still
 	  be demonstrated within the two-week demo period beginning
 	  from the assignment's original due date.</li>
-	    <li><u>Missing a Demo:</u> If you miss your scheduled demo
+	    <li><b>Missing a Demo:</b> If you miss your scheduled demo
 	  with a TA, you will receive a 10 point (one letter grade)
 	  deduction to that assignment for each demo missed.</li>
-	    <li><u>No demo:</u> If you do not demonstrate your
+	    <li><b>No demo:</b> If you do not demonstrate your
 	  assignment, you will receive a 0.</li>
 	  </ul>
 	  <p>One of your goals during your demo is to obtain specific
 	    feedback about your assignment in terms of its strengths
 	    and ways it can be improved.  You can gain up to 
-	    <u>5 points of extra credit</u> per assignment 
+	    <b>5 points of extra credit</b> per assignment 
 	    by submitting a description of any weaknesses and how
 	    you would change your program to address them.  You
 	    may want to take notes about these ideas during your
@@ -66,11 +66,20 @@
 	    from demonstrating your work and thinking carefully about
 	    the feedback you receive.
 	  </p>
+	  <center>
+	  <table width=450 border=1> 
+	    <tr><td align=center>Submit coding assignments through 
+	    <a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>.
+	  </td></tr>
+	    <tr><td align=center>Submit Designs and Revision Plans through 
+	    <a href="https://oregonstate.instructure.com/courses/1771939">Canvas</a>.
+	    </td></tr>
+	  </table>
+	  </center>
         </div>
         <table class="assignments">
             <tr>
-                <td>Assignment #1 - </td>
-                <td> <a href="">Fortune Teller</a></td> 
+                <td>Assignment #1 - Fortune Teller</td> 
             </tr>
             <tr>
                 <td>Assignment #2 -</td>
