--- a/clubs/index.html
+++ b/clubs/index.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,500,700" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="../resources/js/hamburgerSelector.js"></script>
     <title>CS 161 Clubs</title>
@@ -16,7 +16,7 @@
 <body>
     <div class="topBar">
         <h2>CS 161 - Introduction to Computer Science I</h2>
-        <h2>Winter 2020: MWF 2 - 2:50pm, LINC 228</h2>
+        <h2>Winter 2020: MWF 2 - 2:50 p.m., LINC 228</h2>
         <nav><a class="unselected" href="../index.html">home</a><a class="unselected" href="../syllabus/">syllabus</a><a class="unselected" href="../calendar/">calendar</a><a class="unselected" href="../assignments/">assignments</a><a class="unselected" href="../labs/">labs</a><a class="unselected" href="../links/">useful links</a><a class="selected" href="../clubs/">student clubs</a><a class="unselected" href="../TABios/">TA Bios</a></nav>
     </div>
     <div class="hamburgerContainer">
