--- a/calendar/index.html
+++ b/calendar/index.html
@@ -74,7 +74,7 @@
       <tr>
         <td>01/10</td>
         <td>How do computers interact with users?<br>
-	  How do computers make decisions?</td>
+	  How do computers make decisions? (conditionals)</td>
         <td>Lecture 3</td>
         <td>
 	  Rao Lesson 5 (pp. 85-110)<br>
@@ -87,33 +87,33 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>01/13</td>
-        <td>More about computer decision-making<br>
+        <td>
+	  How do computers make decisions? (conditionals)<br>
 	  How can we guard against user mistakes?
 	</td>
         <td>Lecture 4</td>
         <td> 
 	  Rao Lesson 6 (pp. 113-127)<br>
-</td>
+	</td>
       </tr>
-<tr><td class="weekBreak" colspan=5>More to come!</td></tr>
-<!--
       <tr>
         <td>01/15</td>
-        <td>C++ Conditionals</td>
-        <td> <a href="slide4-w19.pdf">Lecture 4</a></td>
-        <td>
-        </td>
-		<td></td>
-		</tr>
+        <td>Working with words and text (strings)<br>
+	  How can we catch and correct errors (bugs)?
+	</td>
+        <td>Lecture 5</td>
+	<td></td>
+	<td></td>
+      </tr>
       <tr>
         <td>01/17</td>
-        <td>Strings and Review</td>
-        <td> <a href="slide5-w19.pdf">Lecture 5</a></td>
-        <td>
-            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a>, &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
+        <td>How can we do something over and over and over? (loops)<br>
+	</td>
+        <td>Lecture 6</td>
+        <td>Rao Lesson 6 (pp. 128-142)<br>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
-		<td><br>
-		Assignment #2 Design due Sunday, 1/19 by 11:59 p.m. (Canvas)</td>
+	<td>Assignment #2 Design due Sunday, 1/19 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="5">Week #3 <hr></td>
@@ -124,22 +124,23 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
         <td></td>
         <td></td>
         <td>
-            <a href="https://en.wikibooks.org/wiki/C%2B%2B_Programming/Chapters/Fundamentals">Wiki Chap. 2</a>
         </td></tr>
       <tr>
         <td>01/22</td>
-        <td>Loops (for, while, do/while)</td>
-        <td> <a href="slide6-w19.pdf">Lecture 6</a></td>
-        <td>
+        <td>More ways to repeat computation with ease</td>
+        <td>Lecture 7</td>
+        <td>Rao Lesson 6 (pp. 128-142)<br>
+            <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-s096-introduction-to-c-and-c-january-iap-2013/lectures-and-assignments/core-c-control-structures-variables-scope-and-uninitialized-memory/MIT6_S096_IAP13_lec2.pdf">MIT Lecture 2</a> &amp; <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL5.html">Miller Lecture 5</a>
         </td>
 	<td>Assignment #2 Peer Review due Wednesday, 01/22 by 11:59 p.m. (Canvas)</td>
-		</tr>
+      </tr>
       <tr>
         <td>01/24</td>
-        <td>Example Loops &amp; C++ String Objects</td>
-        <td> <a href="slide7-w19.pdf">Lecture 7</a></td>
-        <td>
-        </td>
+        <td>What do we do when things go wrong?<br>
+	  How can we use the same code in different places? (functions)
+	</td>
+        <td>Lecture 8</td>
+        <td>Rao Lesson 7 (pp. 151-158)<br>
         <td>Assignment #2 due Sunday, 01/26 by 11:59 p.m. (TEACH)</td>
     </tr>
       <tr>
@@ -147,23 +148,31 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>01/27</td>
-        <td>More Error Handling, Intro Functions</td>
-        <td> <a href="slide8-w19.pdf">Lecture 8</a></td>
-        <td>
+        <td>How do functions make programming easier?
+	</td>
+        <td>Lecture 9</td>
+        <td>Rao Lesson 7 (pp. 151-158)<br>
             <a href="http://www.doc.ic.ac.uk/~wjk/C++Intro/RobMillerL3.html">Miller Lecture 3</a> 
         </td>
       </tr>
       <tr>
         <td>01/29</td>
-        <td>Functions</td>
-         <td> <a href="slide9-w19.pdf">Lecture 9</a></td>
+        <td>Preparing for Midterm #1</td>
+         <td>Lecture 10</td>
         <td>
+<!--<a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
+		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
+        <td><a href="CS_161_Exam_I_Winter_2018_FORM_1_ans.pdf">Past Exam Answers for Class Review</a><p> 
+		<a href="cs161exam1_w17_1_ans.pdf">Past Exam Answers for Study Sessions</a>
+-->
         </td>
       </tr>
       <tr>
         <td>01/31</td>
-        <td>More Functions and Details</td>
-         <td> <a href="slide10-w19.pdf">Lecture 10</a></td>
+        <td>Midterm #1</td>
+        <td>
+<!--	  <a href="test1_noans_f16.pdf"></a><br><a href="test1_ans_f16.pdf"></a>-->
+	</td>
         <td>
         </td>
         <td>Assignment #3 Design due Sunday, 02/02, by 11:59 p.m. (Canvas)</td>
@@ -173,28 +182,36 @@ or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-scie
       </tr>
       <tr>
         <td>02/03</td>
-        <td>Exam I Review</td>
-        <td><a href="CS_161_Exam_I_Winter_2018_FORM_1v2.pdf">Past Exam for Class Review</a><p> 
-		<a href="cs161exam1_w17_1.pdf">Past Exam for Study Sessions</a></td>
-        <td><a href="CS_161_Exam_I_Winter_2018_FORM_1_ans.pdf">Past Exam Answers for Class Review</a><p> 
-		<a href="cs161exam1_w17_1_ans.pdf">Past Exam Answers for Study Sessions</a></td> 
-        <td>Review</td>
-		</tr>
+        <td>What we learned from Midterm #1</td>
+        <td>
+<!--
+<a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
+		<a href="CS161ExamIWinter2019_ans.pdf">Form 1 Key</a><br>Form 2 has the same questions but in a different order </br>
+-->
+	</td> 
+        <td></td>
+      </tr>
       <tr>
         <td>02/05</td>
-        <td>Exam I </td>
-        <td><a href="test1_noans_f16.pdf"></a><br><a href="test1_ans_f16.pdf"></a></td>
-        <td></td>
+        <td>How can functions make permanent changes? (references)
+        <td>Lecture 11</td>
+        <td>Rao Lesson 7 (pp. 166-167)<br>
+        Rao Lesson 8 (pp. 205-208)<br>
+	</td>
 	<td>Assignment #3 Peer Review due Wednesday, 02/05 by 11:59 p.m. (Canvas)</td>
       </tr>
       <tr>
         <td>02/07</td>
-        <td>Exam I Results and Post mortem</td>
-        <td><a href="CS 161 Exam I Winter 2019.pdf">Form 1 No answer</a><br>
-		<a href="CS161ExamIWinter2019_ans.pdf">Form 1 Key</a><br>Form 2 has the same questions but in a different order </br></td>
-        <td></td>
-		<td>Assignment #3 due Sunday, 02/09 by 11:59 p.m. (TEACH)</td>
-		</tr>
+        <td>How can a program adapt when data storage isn't known in advance? (dynamic memory allocation and pointers)
+	</td>
+        <td>Lecture 12</td>
+        <td>Rao Lesson 8 (pp. 177-186)<br>
+        Rao Lesson 8 (pp. 187-204)<br>
+	</td>
+	<td>Assignment #3 due Sunday, 02/09 by 11:59 p.m. (TEACH)</td>
+      </tr>
+<tr><td class="weekBreak" colspan=5>More to come!</td></tr>
+<!--
       <tr>
         <td class="weekBreak" colspan="5">Week #6 <hr></td>
       </tr>
