--- a/links/index.html
+++ b/links/index.html
@@ -22,8 +22,8 @@
     </div>
     <div class="content">
         <h2>Useful Links</h2>
-        <h3><a href="program_layout.pdf">C/C++ Program Layout</a><br>
-	  <a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>
+        <h3><!--<a href="program_layout.pdf">C/C++ Program Layout</a><br>-->
+	  <!--<a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>-->
 	  Turn in assignments: 
 	  <a href="https://oregonstate.instructure.com/courses/1771939">
 	    Canvas</a> and
