Add link to tutoring hours and update assistance section.

--- a/links/index.html
+++ b/links/index.html
@@ -40,9 +40,12 @@
 <a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a></li>
 </ul>
 
-<h3>Assistance</h3>
+<h3>Need help?</h3>
 <ul>
-<li> Tutoring hours
+<li> <a href="../index.html">TA and instructor office hours</a>
+<li> <a href="https://piazza.com/class/k4eslq3v74a11q">Ask questions on Piazza</a>
+<li> <a href="https://engineering.oregonstate.edu/current-students/academic-support/undergraduate-tutoring">Use OSU tutoring hours (starts week 2, scroll down to "CS and ECE Course Tutoring")</a> 
+- get <b>extra credit</b> for your first visit!
 <li> <a href="https://eecs.oregonstate.edu/eecs-it/">-- EECS IT -- </a></li>
 </ul>
 
