Add Jessica Garcia's hours, bio, and pic.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -76,6 +76,14 @@
 
         <div class="person">
             <div class="namePhoto">
+                <h3>Jessica Garcia</h3>
+                <div class="imgContainer"><img src="pics/jessica.jpg"></div>
+            </div>
+            <p>Greetings! My name is Jessica, and I am a second year Computer Science student. In my free time, I enjoy traveling, playing volleyball, bowling, and hiking. Feel free to reach out if you have any questions about CS, getting involved with undergrad research, or studying abroad; I would be happy to help! Looking forward to working with you this term.</p> 
+        </div>
+
+        <div class="person">
+            <div class="namePhoto">
                 <h3>Miguel Gaspar</h3>
                 <div class="imgContainer"><img src="pics/miguel.jpg"></div>
             </div>
