Add Maddie's bio and pic.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -116,6 +116,14 @@
             </div>
             <p>Hello, I'm Lucas Pichette. I'm a 2018 graduate from Sam Barlow High School, currently a second-year at OSU, and I had very little programming experience going into my major as a computer scientist. My focus is in cyber security, but I'm a fan of almost anything computer science related. TAs and www.learncpp.com are what saved my rear in CS161 and CS162, I encourage the use of both of these resources!!</p>
         </div>
+
+        <div class="person">
+            <div class="namePhoto">
+                <h3>Maddie Smith</h3>
+                <div class="imgContainer"><img src="pics/maddie.jpg"></div>
+            </div>
+            <p>As a second year Honors student, I am working to complete my degrees in Applied Computer Science and Sustainability. Outside of school, I am the CFO of the Beta Epsilon chapter of Kappa Alpha Theta (my sorority). I have played intramural sports every term at OSU and I love to live a balanced, active life. I've lived in California, Oregon, and Washington, and Oregon is by far my favorite location due to the weather, landscape, and culture. I am eager for the opportunity to answer your questions and work through problems with you this term. Please don't hesitate to reach out with any questions.</p>
+        </div>
         
 	<div class="person">
 	    <div class="namePhoto">
