Update academic integrity content.

--- a/links/index.html
+++ b/links/index.html
@@ -24,20 +24,23 @@
         <h2>Useful Links</h2>
         <h3><!--<a href="program_layout.pdf">C/C++ Program Layout</a><br>-->
 	  <!--<a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>-->
-	  Turn in assignments: 
+	  <font color=red>
+	    Turn in assignments: 
 	  <a href="https://oregonstate.instructure.com/courses/1771939">
 	    Canvas</a> and
 	  <a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a><br>
 	Class discussions: <a href="https://piazza.com/class/k4eslq3v74a11q">Piazza</a>
+	  </font>
 </h3>
 
 
-     <h3>Oregon State University Academic Dishonesty Policies</h3>
+     <h3>Expectations of Oregon State University students</h3>
 <ul>
-      <li><a href="https://studentlife.oregonstate.edu/studentconduct">Office of Student Conduct</a></li>
-      <li><a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Dishonesty Policy</a></li>
-      <li>
-<a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a></li>
+  <li>We want to help you understand what our expectations are.  Questions are welcome!
+      <li>Follow the <a href="https://studentlife.oregonstate.edu/studentconduct">Student Conduct and Community Standards</a></li>
+      <li>Avoid any <a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Misconduct</a> (know how it is defined and what activites are not allowed)</li>
+      <li>I recommend this 
+<a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed</li>
 </ul>
 
 <h3>Need help?</h3>
