Add positive learning community statement.

--- a/links/index.html
+++ b/links/index.html
@@ -38,9 +38,10 @@
 <ul>
   <li>We want to help you understand what our expectations are.  Questions are welcome!
       <li>Follow the <a href="https://studentlife.oregonstate.edu/studentconduct">Student Conduct and Community Standards</a></li>
-      <li>Avoid any <a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Misconduct</a> (know how it is defined and what activites are not allowed)</li>
-      <li>I recommend this 
-<a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed</li>
+      <li>Avoid any <a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Misconduct</a> (know how it is defined and what activities are not allowed)<br>
+      I recommend exploring this 
+<a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed.</li>
+      <li>Help us create a <a href="community.html">positive learning community</a>
 </ul>
 
 <h3>Need help?</h3>
