Add contact info for private meeting.

--- a/links/community.html
+++ b/links/community.html
@@ -78,12 +78,13 @@ Please make yourself aware of OSU's diversity documents and policies:
 <li><a href="http://studentlife.oregonstate.edu/studentconduct">Student Conduct</a></li>
 <li><a href="http://eoa.oregonstate.edu/bullying-policy">Bullying Policy</a></li>
 <li><a href="http://eoa.oregonstate.edu/discrimination-and-harassment-policies"> Discrimination and Harassment Policy</a></li>
+<li><a href="https://eoa.oregonstate.edu/sites/eoa.oregonstate.edu/files/religious_acccommodation_policy_for_students_1.12.2017.pdf">Relgious Accommodation of Students</a>
 </ol>
 
 <h2 id="resources">What to do about harassment</h2>
 <p>If you are the victim of harassment in this class, there are several resources available to you:</p>
 <ol>
-<li>You may schedule a private meeting to talk to me.</li>
+<li>Contact me (7-9676 or <a href="mailto:wagstafk@oregonstate.edu">kiri.wagstaff@oregonstate.edu</a>) to schedule a private meeting.</li>
 <li>Fill out the <a href="http://oregonstate.qualtrics.com/jfe/form/SV_2mdIdTRe2ObShwx">Bias Incident Report Form</a></li>
 <li>Fill out the  <a href="https://oregonstate2-gme-advocate.symplicity.com/public_report/index.php/pid317828?">Public Incident Report</a></li>
 <li>You may contact the <a href="http://oregonstate.edu/ombuds/">University Ombuds Office</a> for confidential guidance and advice.</li>
