Correct Erick's name to include the k.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -48,7 +48,7 @@
 
         <div class="person">
             <div class="namePhoto">
-                <h3>Eric Branner</h3>
+                <h3>Erick Branner</h3>
                 <div class="imgContainer"><img src="pics/eric.jpg"></div>
             </div>
             <p>
