Add religious accommodation policy.

--- a/links/index.html
+++ b/links/index.html
@@ -42,6 +42,8 @@
       I recommend exploring this 
 <a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed.</li>
       <li>Help us create a <a href="community.html">positive learning community</a>
+      <li>Support diversity through the 
+<a href="https://eoa.oregonstate.edu/sites/eoa.oregonstate.edu/files/religious_acccommodation_policy_for_students_1.12.2017.pdf">Religious Accommodation Policy</a>
 </ul>
 
 <h3>Need help?</h3>
