--- a/TABios/index.html
+++ b/TABios/index.html
@@ -109,6 +109,15 @@
             <p> Greetings all, my name is Thang Kim but I go by LK. This is my 6th term being a TA. I am a senior doing the applied option with a business and entrepreneurship minor. Feel free to ask lots of questions, and I look forward to working with you all!.</p>
         </div>
 
+
+        <div class="person">
+            <div class="namePhoto">
+                <h3>Jason O'Brien</h3>
+                <div class="imgContainer"><img src="pics/jason.jpg"></div>
+            </div>
+            <p>Hi! My name is Jason O'Brien and I am a senior studying Computer Science with the Computer Systems option. I have a passion in app and game development. Feel free to ask me anything! CS161 is going to be a lot of fun!</p>
+        </div>
+
         <div class="person">
             <div class="namePhoto">
                 <h3>Lucas Pichette</h3>
