Add info about ReachOut and suicide prevention.

--- a/links/index.html
+++ b/links/index.html
@@ -41,7 +41,7 @@
       <li>Avoid any <a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Misconduct</a> (know how it is defined and what activities are not allowed)<br>
       I recommend exploring this 
 <a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed.</li>
-      <li>Help us create a <a href="community.html">positive learning community</a>
+<!--      <li>Help us create a <a href="community.html">positive learning community</a>-->
       <li>Support diversity through the 
 <a href="https://eoa.oregonstate.edu/sites/eoa.oregonstate.edu/files/religious_acccommodation_policy_for_students_1.12.2017.pdf">Religious Accommodation Policy</a>
 </ul>
@@ -52,7 +52,13 @@
 <li> <a href="https://piazza.com/class/k4eslq3v74a11q">Ask questions on Piazza</a>
 <li> <a href="https://engineering.oregonstate.edu/current-students/academic-support/undergraduate-tutoring">Use OSU tutoring hours (starts week 2, scroll down to "CS and ECE Course Tutoring")</a> 
 - get <b>extra credit</b> for your first visit!
-<li> <a href="https://eecs.oregonstate.edu/eecs-it/">-- EECS IT -- </a></li>
+<li> <a href="https://eecs.oregonstate.edu/eecs-it/">Get technical help from EECS IT </a></li>
+<li>Learn about resources for wellness and academic success at
+<a href="http://oregonstate.edu/ReachOut">ReachOut</a>.  </li>
+<li>If you are in immediate crisis,
+please contact the Crisis Text Line by texting OREGON to 741-741 or
+call the National Suicide Prevention Lifeline at 1-800-273-TALK
+(8255).</li>
 </ul>
 
         <h3>UNIX and Vim Documentation</h3>
