--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -24,15 +24,15 @@
     </div>
     <div class="syllabusContent">
         <h2 class="centerSyllabus" style="text-align: center;">Syllabus</h2>
+<img style="padding: 0px 20px 0px 0px;" align=left width=150 src="textbook-rao.jpg">
 <h3>Textbook</h3>
-<ul>
 <li>"Sams Teach Yourself C++ in One Hour a Day" by Siddhartha Rao
 <li><a href="https://www.goodreads.com/book/show/30201483-sams-teach-yourself-c-in-one-hour-a-day">Reviews on goodreads</a>
 <li>To get a copy, check out your favorite library or bookstore, or try these
 <a href=" http://verbacompare.osubeaverstore.com/comparison?id=2020-Winter__CS__161__020">options from the OSU bookstore</a>
 <li><a href="https://ptgmedia.pearsoncmg.com/imprint_downloads/informit/bookreg/9780789757746/stycplusplusinonehouraday8e_errata_firstprinting_20170308.pdf">Errata</a> - check here for updates/corrections
-</ul>
 
+<br clear=all>
 <h3>More info coming soon!</h3>
 <!--
         <h3>Office Hours - 2101 KEC</h3>
