Updates to week 1.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -45,8 +45,8 @@
         <td>What this class offers you,<br>
 	  what your responsibilities are,<br>
 	  and how we communciate with computers</td>
-        <td>Lecture 1<br>
-	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a></td>
+        <td>Lecture 1
+	</td>
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
 	  Rao Lesson 2 (pp. 17-29)<br>
@@ -63,8 +63,11 @@
       <tr>
         <td>01/08</td>
         <td>How do we store information in a computer?<br>
-	  How do we calculate new information?</td>
-        <td>Lecture 2</td>
+	  What is good programming style?
+	</td>
+        <td>Lecture 2<br>
+	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+	</td>
         <td>
 	  Rao Lesson 3 (pp. 31-47 + 58-59)<br>
 	  or 
@@ -73,9 +76,13 @@
       </tr>
       <tr>
         <td>01/10</td>
-        <td>How do computers interact with users?<br>
+        <td>
+	  How do computers interact with users?<br>
+	  How do we calculate new information?<br>
 	  How do computers make decisions? (conditionals)</td>
-        <td>Lecture 3</td>
+        <td>Lecture 3<br>
+	  <a href="https://tinyurl.com/cs161-week1">Edabit Week 1</a>
+	</td>
         <td>
 	  Rao Lesson 5 (pp. 85-110)<br>
 or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf">MIT Lecture 2</a> 
