Add Junze's bio.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -149,6 +149,14 @@
 	    </div>
 	    <p>Hi all. My name is Cheng Xie. I'm junior in CS system major. If you have any questions,feel free to ask me.I'm very happy to answer your questions!</p>
 	</div>
+
+	<div class="person">
+	    <div class="namePhoto">
+		<h3>Junze Zhang</h3>
+		<div class="imgContainer"><img src="pics/junze.jpg"></div>
+	    </div>
+	    <p>Hi all, my name is Junze Zhang, but you can just call me Jun. I am a junior CS student with the applied option. I am from Fuzhou, China and I can speak Mandarin if needed. I like basketball, cooking, and hanging out with friends during my free time. </p>
+	</div>
 	
 
     </div>
