--- a/labs/index.html
+++ b/labs/index.html
@@ -32,7 +32,7 @@
         </div>
         <table class="assignments">
             <tr>
-                <td>Lab #1 - Off to a Good Start</td>
+                <td>Lab #1 - <a href="lab1-W20.pdf">Off to a Good Start</a></td>
             </tr>
             <tr>
                 <td>Lab #2 - <!-- <a href="CS_161_W19_Lab_WS_2.pdf">Worksheet: Design</a> and <a href="Lab2-Student-W19.pdf">Hands-on: More Linux, Conditionals, and rand()</a> --></td>
