--- a/labs/index.html
+++ b/labs/index.html
@@ -24,6 +24,9 @@
     <div class="content">
         <div class="instructions">
             <h2>Labs</h2>
+	    <p>Labs are your chance to learn programming skills
+	      in a friendly, helpful environment.  Learn by doing!
+	      </p>
             <p>If you attended a lab and did not finish it, you can
             finish up to 3 more points of the lab at home and bring it with
             you to the next week's lab for a grade. You must show your
@@ -32,7 +35,17 @@
         </div>
         <table class="assignments">
             <tr>
-                <td>Lab #1 - <a href="lab1-W20.pdf">Off to a Good Start</a></td>
+                <td>Lab #1 - <a href="lab1-W20.pdf">Off to a Good Start</a><br>
+		  <p>For more practice:</p>
+		  <ul>
+		    <li>Learn + practice your linux knowledge:
+		      <a href="https://www.memrise.com/course/488100/linux-commands-5/2/">Terminal commands (Memrise)</a></li>
+		    <li>Learn + practice your vim skills:
+		      <a href="https://www.memrise.com/course/484561/linux-part-1/7/">Vim commands (Memrise)</a></li>
+		    <li>Become a bash shell master:
+		      <a href="https://www.memrise.com/course/50252/shell-fu/">Shell-Fu (Memrise)</a></li>
+		  </ul>
+		</td>
             </tr>
             <tr>
                 <td>Lab #2 - <!-- <a href="CS_161_W19_Lab_WS_2.pdf">Worksheet: Design</a> and <a href="Lab2-Student-W19.pdf">Hands-on: More Linux, Conditionals, and rand()</a> --></td>
