Add Zach's hours and bio.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -136,6 +136,14 @@
         
 	<div class="person">
 	    <div class="namePhoto">
+		<h3>Zachary Taylor</h3>
+		<div class="imgContainer"><img src="pics/zach.jpg"></div>
+	    </div>
+	    <p>Hey everyone, I'm Zach. I am currently a third-year student here at OSU majoring in both math and computer science with a focus on security. More specifically, I am interested in the mathematical side of cryptography and how quantum computers will play into this field in the future. When I'm not busy doing homework at the library, you can find me skiing, rock climbimg, or at a metal concert. If you have any questions, feel free to stop by my office hours and ask!</p>
+	</div>
+
+	<div class="person">
+	    <div class="namePhoto">
 		<h3>Austin Wilmoth</h3>
 		<div class="imgContainer"><img src="pics/austin.jpg"></div>
 	    </div>
