--- a/assignments/index.html
+++ b/assignments/index.html
@@ -79,7 +79,8 @@
         </div>
         <table class="assignments">
             <tr>
-                <td>Assignment #1 - Fortune Teller</td> 
+                <td>Assignment #1 - <a href="assign1-W20-fortune.pdf">
+		    Fortune Teller</a>, due Jan. 12 at 11:59 p.m.</td> 
             </tr>
             <tr>
                 <td>Assignment #2 -</td>
