Add link to assignment 1.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -87,7 +87,9 @@
 	  Rao Lesson 5 (pp. 85-110)<br>
 or <a href="https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-096-introduction-to-c-january-iap-2011/lecture-notes/MIT6_096IAP11_lec02.pdf">MIT Lecture 2</a> 
         </td>
-	<td>Assignment #1 due Sunday, 01/12 by 11:59 p.m. (TEACH)</td>
+	<td><a href="../assignments/assign1-W20-fortune.pdf">
+	    Assignment #1</a> due Sunday, 01/12 by 11:59 p.m. 
+	  (<a href="https://teach.engr.oregonstate.edu/teach.php">TEACH</a>)</td>
       </tr>
       <tr>
         <td class="weekBreak" colspan="5">Week #2 <hr></td>
