--- a/links/index.html
+++ b/links/index.html
@@ -23,7 +23,7 @@
     <div class="content">
         <h2>Useful Links</h2>
         <h3><!--<a href="program_layout.pdf">C/C++ Program Layout</a><br>-->
-	  <!--<a href="../assignments/161_style_guideline.pdf">CS 161 Style Guidelines</a><br>-->
+	  <a href="../assignments/cs161-style-guidelines.pdf">CS 161 Style Guidelines</a><br>
 	  <font color=red>
 	    Turn in assignments: 
 	  <a href="https://oregonstate.instructure.com/courses/1771939">
@@ -41,7 +41,7 @@
       <li>Avoid any <a href="https://studentlife.oregonstate.edu/studentconduct/academicmisconduct">Academic Misconduct</a> (know how it is defined and what activities are not allowed)<br>
       I recommend exploring this 
 <a href="https://guides.library.oregonstate.edu/c.php?g=286121&p=3896378">Academic Integrity Tutorial</a> so you are fully informed.</li>
-<!--      <li>Help us create a <a href="community.html">positive learning community</a>-->
+  <li>Help us create a <a href="community.html">positive learning community</a>
       <li>Support diversity through the 
 <a href="https://eoa.oregonstate.edu/sites/eoa.oregonstate.edu/files/religious_acccommodation_policy_for_students_1.12.2017.pdf">Religious Accommodation Policy</a>
 </ul>
