Add Shaurya's hours and bio.

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -92,6 +92,14 @@
 
         <div class="person">
             <div class="namePhoto">
+                <h3>Shaurya Gaur</h3>
+                <div class="imgContainer"><img src="pics/shaurya.jpg"></div>
+            </div>
+            <p>Hi everyone! My name is Shaurya Gaur and I'm a first-year Applied CS student in the Honors College focusing on Artificial Intelligence and Data Science pursuing Business and Math minors on the side. Outside of this class, I'm the Secretary for the West Side Area Council, and I'm currently doing research on using machine learning to make a music playlist to increase productivity. In my free time, I'm a big fan of F1 racing, music and movies. Feel free to reach out if you have any questions - I'm excited to work with all of you!</p>
+        </div>
+
+        <div class="person">
+            <div class="namePhoto">
                 <h3>Laura Jiang</h3>
                 <div class="imgContainer"><img src="pics/laura.jpg"></div>
             </div>
