Remove defunct link to group calendar.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
         </div>
     </div>
     <div class="signUp">
-        <h2>TA Information: Office/Grading Hours</h2><a href="https://calendar.google.com/calendar/embed?src=m4q5dalp84fif7e48d3o3ngh78%40group.calendar.google.com&ctz=America/Los_Angeles">TA Office Hour Calendar</a></div>
+        <h2>TA Information: Office/Grading Hours</h2>
+    </div>
     <div id="taHoursMobileHeader">
 	
     </div>
