Update office hours.

--- a/index.html
+++ b/index.html
@@ -42,13 +42,14 @@
             </p>
         </div>
         <div class="contactInfo">
-            <p>Instructor: Dr. Kiri Wagstaff
+            <p><b>Instructor: Dr. Kiri Wagstaff</b>
                 <br> 2079 Kelley Engineering Center
                 <br><a href="mailto:wagstafk@oregonstate.edu">kiri.wagstaff@oregonstate.edu</a>
                 <br> (541) 737-9676
-                <br>Office Hours (2079 KEC): MW 3 - 4 p.m.
+                <br>Office Hours (2079 KEC): 
+		<b>Mon 4 - 5 p.m. and Weds 3 - 4 p.m.</b>
             </p>
-			<p>Graduate TAs: Sabrina Jesmin and Yipeng (Roger) Song
+			<p><b>Graduate TAs: Sabrina Jesmin and Yipeng (Roger) Song</b>
                 <br><a href="mailto:jesmins@oregonstate.edu">jesmins@oregonstate.edu</a> and <a href="mailto:songyip@oregonstate.edu">songyip@oregonstate.edu</a>
                 <br>Office Hours: See Below
             </p>
