Bold syllabus info for emphasis.

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -34,8 +34,8 @@
 <br clear=all>
 
 <center>
-<h3>Please carefully read the information in the 
-<a href="cs161-W20-syllabus.pdf">CS 161 Winter 2020 Syllabus</a>.
+<h3><b>Please carefully read the information in the 
+<a href="cs161-W20-syllabus.pdf">CS 161 Winter 2020 Syllabus</a>.</b>
 <br>
 It covers information about course staff, office hours, 
 course expectations, grading, academic integrity, 
