Add community link to syllabus and omit Jennifer's name. Remove vestigial file from syllabus/ directory.

--- a/syllabus/index.html
+++ b/syllabus/index.html
@@ -23,21 +23,15 @@
         <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
     </div>
     <div class="syllabusContent">
+<!--
         <h2 class="centerSyllabus" style="text-align: center;">Syllabus</h2>
-<img style="padding: 0px 20px 0px 0px;" align=left width=150 src="textbook-rao.jpg">
-<h3>Textbook</h3>
-<li>"Sams Teach Yourself C++ in One Hour a Day" by Siddhartha Rao
-<li><a href="https://www.goodreads.com/book/show/30201483-sams-teach-yourself-c-in-one-hour-a-day">Reviews on goodreads</a>
-<li>To get a copy, check out your favorite library or bookstore, or try these
-<a href=" http://verbacompare.osubeaverstore.com/comparison?id=2020-Winter__CS__161__020">options from the OSU bookstore</a>
-<li><a href="https://ptgmedia.pearsoncmg.com/imprint_downloads/informit/bookreg/9780789757746/stycplusplusinonehouraday8e_errata_firstprinting_20170308.pdf">Errata</a> - check here for updates/corrections
-<br clear=all>
-
+-->
 <center>
 <h3><b>Please carefully read the information in the 
-<a href="cs161-W20-syllabus.pdf">CS 161 Winter 2020 Syllabus</a>.</b>
+<a href="cs161-W20-syllabus.pdf">CS 161 Winter 2020 Syllabus</a><br>
+and my <a href="http://classes.engr.oregonstate.edu/eecs/winter2020/cs161-020/links/community.html">expectations for a positive learning community</a>.</b>
 <br>
-It covers information about course staff, office hours, 
+The syllabus covers information about course staff, office hours, 
 course expectations, grading, academic integrity, 
 extra credit, and more.  You are expected to be fully aware 
 of all course policies and information contained in the syllabus.
@@ -45,18 +39,15 @@ of all course policies and information contained in the syllabus.
 </h3>  
 </center>
 
-        <script>
-            $(document).ready(function () {
-                $(document).scroll(function () {
-                    if ($(document).scrollTop() >= 50) {
-                        $("nav").addClass("fix-place");
-                        $("html").addClass("extraSpace");
-                    } else {
-                        $("nav").removeClass("fix-place");
-                        $("html").removeClass("extraSpace");
-                    }
-                });
-            });
-        </script>
-    </div>
+<p>
+<img style="padding: 0px 20px 0px 0px;" align=left width=150 src="textbook-rao.jpg">
+<h3>Textbook</h3>
+<li>"Sams Teach Yourself C++ in One Hour a Day" by Siddhartha Rao
+<li><a href="https://www.goodreads.com/book/show/30201483-sams-teach-yourself-c-in-one-hour-a-day">Reviews on goodreads</a>
+<li>To get a copy, check out your favorite library or bookstore, or try these
+<a href=" http://verbacompare.osubeaverstore.com/comparison?id=2020-Winter__CS__161__020">options from the OSU bookstore</a>
+<li><a href="https://ptgmedia.pearsoncmg.com/imprint_downloads/informit/bookreg/9780789757746/stycplusplusinonehouraday8e_errata_firstprinting_20170308.pdf">Errata</a> - check here for updates/corrections
+</p>
+</div>
+
 </body>
