Add Class Houses and points to clubs page.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -23,6 +23,31 @@
         <div class="hamburger"><span class="line"></span><span class="line"></span><span class="line"></span></div>
     </div>
     <div class="content">
+      <center>
+	<h2>Class Houses</h2>
+	<table cellpadding=5>
+	  <tr>
+	    <td align=center><h3>Babbage</h3></td>
+	    <td align=center><h3>Lovelace</h3></td>
+	    <td align=center><h3>Turing</h3></td>
+	    <td align=center><h3>Hopper</h3></td>
+	  </tr>
+	  <tr>
+	    <td><img height=200 alt="Babbage" src="images/babbage.jpg"></td>
+	    <td><img height=200 alt="Lovelace" src="images/lovelace.jpg"></td>
+	    <td><img height=200 alt="Turing" src="images/turing.jpg"></td>
+	    <td><img height=200 alt="Hopper" src="images/hopper.jpg"></td>
+	  </tr>
+	  <tr>
+	    <td align=center><h3>30 points</h3></td>
+	    <td align=center><h3>10 points</h3></td>
+	    <td align=center><h3>20 points</h3></td>
+	    <td align=center><h3>20 points</h3></td>
+	  </tr>
+	</table>
+      </center>
+<hr>
+
         <h3 class="center">Here you can find more information about OSU student clubs, as well as their websites:<br/><a href="http://eecs.oregonstate.edu/current-students/undergraduate/leadership-research-involvement/student-groups">http://eecs.oregonstate.edu/current-students/undergraduate/leadership-research-involvement/student-groups</a></h3>
         <div class="clubsBox">
             <div class="imgBox"><img src="images/LUG.png" /></div>
