add arthur york bio and demo hours

--- a/TABios/index.html
+++ b/TABios/index.html
@@ -174,6 +174,13 @@
 	    <p>Hi all, my name is Junze Zhang, but you can just call me Jun. I am a junior CS student with the applied option. I am from Fuzhou, China and I can speak Mandarin if needed. I like basketball, cooking, and hanging out with friends during my free time. </p>
 	</div>
 	
+    <div class="person">
+        <div class="namePhoto">
+        <h3>Arthur York</h3>
+        <div class="imgContainer"><img src="pics/arthur.jpg"></div>
+        </div>
+        <p>My name is Arthur York, I am a junior majoring in computer science with the Systens option. I have been doing moleculr simulation research with a chemical engineer for two years and have been a TA for CS16X for one and a half years. If you have any questions about research or computer science at OSU feel free to ask!</p>
+    </div>
 
     </div>
     <script type="text/javascript">
