Add link to Lecture 1 slides PDF.

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -45,7 +45,7 @@
         <td>What this class offers you,<br>
 	  what your responsibilities are,<br>
 	  and how we communciate with computers</td>
-        <td>Lecture 1
+        <td><a href="lecture1-W20.pdf">Lecture 1</a>
 	</td>
         <td>
 	  Rao Lesson 1 (pp. 1-15)<br>
