Add meeting times for clubs.

--- a/clubs/index.html
+++ b/clubs/index.html
@@ -52,7 +52,9 @@
         <div class="clubsBox">
             <div class="imgBox"><img src="images/LUG.png" /></div>
             <div class="text">
-                <h3>Linux Users Group:<br>TBD</h3>
+                <h3>Linux Users Group:<br>
+		  Tuesdays at 6:00 p.m., KEC 1005
+		</h3>
                 <p>The Linux Users Group (LUG) has been a long established OSU CS group. The CS program at OSU is closely involved with Linux, all of CS servers run on linux, and a large part of our curriculum focuses on the inner workings of Linux. OSU has a department called the OSL (Open Source Lab) dedicated to working on and improving open source technology. For that reason, we have many people that are interested and passionate about Linux and open source software. LUG meets every week and generally spends the hour beginning with a talk or activity, and then spending the rest of the time hanging out. If you would like to know more about Linux, CS, computers, open source software, or you want to get Linux installed on your computer, feel free to come on by.</p>
                 <table>
                     <tr>
@@ -69,12 +71,14 @@
         <div class="clubsBox">
             <div class="imgBox"><img src="images/appclubColorized.png" /></div>
             <div class="text">
-                <h3>App Development Club:<br>TBD</h3>
+                <h3>App Development Club:<br>
+		  Wednesdays 6:00 - 7:00 p.m., KEC 1005
+		</h3>
                 <p>The App Development Club has existed as a club focusing on the more popular and cutting edge technologies for developing applications. We have people that specialize in IOS and web development, as well as some people that have worked on developing Android applications. The club functions as a workshop, giving you time to work on an app and being able to get assistance from other people in the club. If you would like to learn about app development, need some help developing, or want to make some new friends, please come by the App Club. The App Club is small and needs some new members to continue to exist, so new people are especially encouraged.</p>
                 <table>
                     <tr>
                         <td>Website:</td>
-                        <td> <a href="http://http://osuapp.club">http://http://osuapp.club</a></td>
+                        <td> <a href="http://osuapp.club">http://osuapp.club</a></td>
                     </tr>
                     <tr>
                         <td>Mailing list:</td>
@@ -88,7 +92,9 @@
         <div class="clubsBox">
             <div class="imgBox"><img src="images/osu_logo.jpg" /></div>
             <div class="text">
-                <h3>Association of Computing Machinery:<br>TBD</h3>
+                <h3>Association of Computing Machinery:<br>
+		  Thursdays 5:00 - 6:00 p.m., KEC 1007
+		  </h3>
                 <p>ACM is an organization that spans the nation. This is the OSU branch of the club, and being a part of a large organization gives the club many options and a good reputation. This allows them to get guest speakers from tech companies from all over the state. In addition to the guest talks, there is frequent availability of pizza for club meetings, and training for the yearly ICPC coding competition.</p>
                 <table>
                     <tr>
@@ -105,7 +111,7 @@
         <div class="clubsBox">
             <div class="imgBox"><img src="images/osu_logo.jpg" /></div>
             <div class="text">
-                <h3>Association of Computing Machinery Womens Chapter:<br>Thursdays 5:30pm - 6:30pm KEC 1005 (Weeks 2, 4, 6, 8, 10)</h3>
+                <h3>Association of Computing Machinery Womens Chapter:<br>Thursdays 5:30pm - 6:30 p.m., KEC 1005 (Weeks 2, 4, 6, 8, 10)</h3>
                 <p>The goal of ACM-W student chapters is to recruit and retain women students in undergraduate and graduate computing programs. The chapters provide a variety of activities to educate women about the opportunities in the field of computing, engage them in exciting computing activities, connect them with women leaders in the field, and encourage them to promote the field of computing to young girls.</p>
                 <table>
                     <tr>
